tests/network-policy-checks-bad-path/api_version_wrong_type.yaml
apiVersion:
  - networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-version-wrong-type
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
