tests/network-policy-checks-bad-path/endport_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: endport-test-type
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.0.0.0
      ports:
        - port: 53
          protocol: UDP
          # wrong type
          endPort: UDP
