tests/network-policy-checks-bad-path/ipblock_bad_cidr_3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-bad-cidr
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          # bad cidr
          cidr: 20.0.0.0/33
      ports:
        - port: 53
