tests/network-policy-checks-bad-path/ipblock_except_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-fields-test-type2
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.0.0.0/24
          #wrong type (not array)
          except:
            10.0.0.1
      ports:
        - port: 53
          protocol: UDP
