tests/network-policy-checks-bad-path/matchexpressions_key_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-key-test-type
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      # wrong type
      - key:
          - app
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
