tests/network-policy-checks-bad-path/matchexpressions_operator_wrong_value.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-operator-test-wrong-value
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        # wrong value
        operator:
          from
      - key: app
        operator: Exists
      - key: tier
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
