tests/network-policy-checks-bad-path/matchexpressions_values_no_match_with_operator2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-values-test2
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      # empty values with In/NotIn
      - key: app
        operator: In
  policyTypes:
    - Ingress
    - Egress
