tests/network-policy-checks-bad-path/matchexpressions_values_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-values-test-type
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        # wrong type:
        values:
          helm
  policyTypes:
    - Ingress
    - Egress
