tests/network-policy-checks-bad-path/metadata_does_not_exist.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
#no metadata section
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
