tests/network-policy-checks-bad-path/metadata_is_null.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# null
metadata: null
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
