tests/network-policy-checks-bad-path/metadata_name_does_not_exist.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  # name does not exist
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
