tests/network-policy-checks-bad-path/metadata_with_no_value.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
