tests/network-policy-checks-bad-path/metadata_wrong_keys.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# wrong keys
metadata:
  name: general-metadata-test
  namespaceSelector: {}
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
