tests/network-policy-checks-bad-path/spec_egress_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-egress-test-type
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  # wrong type
  egress:
     to:
        - namespaceSelector: { }
          podSelector: { }
