tests/network-policy-checks-bad-path/spec_ingress_wrong_keys.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-ingress-test-keys
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
  # wrong keys
  ingress:
    - to:
        - namespaceSelector: { }
          podSelector: { }
