tests/network-policy-checks-bad-path/spec_podselector_has_no_value.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-podselector-test-no-val
  namespace: kube-system
spec:
  # none
  podSelector:
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
